# bazel-diff-repro-1

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-diff.sh
